# src/docs/swagger.json
@@ -28,19 +28,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Updated rate",
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.GetRateResponse"
                         }
                     },
-                    "401": {
-                        "description": "Wrong parameters",
+                    "400": {
+                        "description": "BadRequest",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Update not found",
+                        "description": "NotFound",
                         "schema": {
                             "type": "string"
                         }
@@ -79,19 +79,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Last updated rate",
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.GetRateResponse"
                         }
                     },
-                    "401": {
-                        "description": "Wrong parameters",
+                    "400": {
+                        "description": "BadRequest",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "No updates were performed",
+                        "description": "NotFound",
                         "schema": {
                             "type": "string"
                         }
@@ -125,7 +125,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Update response",
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.StartUpdateRateResponse"
                         }
